@@ -1,6 +1,6 @@
 ---
 name: Directory-Organize
-version: 0.9
+version: 0.9.1
 author:
   - 'Mathias Weidner <mathias@weidner.in-bad-schmiedeberg.de>'
 abstract: Create and Organize Directories
@@ -14,8 +14,8 @@ requires:
 provides:
   Directory::Organize:
     file: lib/Directory/Organize.pm
-    version: v0.9
-generated_by: Module::Build version 0.280801
+    version: 0.9.1
+generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
