@@ -1,18 +1,18 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.2808_01
+# Note: this file was auto-generated by Module::Build::Compat version 0.03
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
-          'NAME' => 'Directory::Organize',
-          'VERSION_FROM' => 'lib/Directory/Organize.pm',
-          'PREREQ_PM' => {
-                           'Getopt::Long' => 0,
-                           'Term::ReadKey' => 0,
-                           'version' => 0
-                         },
+          'PL_FILES' => {},
           'INSTALLDIRS' => 'site',
+          'NAME' => 'Directory::Organize',
           'EXE_FILES' => [
                            'mkdir_heute'
                          ],
-          'PL_FILES' => {}
+          'VERSION_FROM' => 'lib/Directory/Organize.pm',
+          'PREREQ_PM' => {
+                           'Getopt::Long' => 0,
+                           'version' => 0,
+                           'Term::ReadKey' => 0
+                         }
         )
 ;
